--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -4,32 +4,39 @@ on:
   push:
     branches:
       - source
+
+permissions:
+  contents: write
+
 jobs:
   build:
     name: deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
           node-version: '10.x'
+
       - name: install
-        run: |
-          npm install
+        run: npm install
+
       - name: build
         run: |
           ls -la
           npm run build
+
       - name: git status
-        run: |
-          git status
+        run: git status
+
       - name: working dir
         run: |
-          cd public 
+          cd public
           pwd
           ls -la
+
       - name: Gatsby Publish
         uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          access-token: ${{ secrets.ACCESS_TOKEN }}
- 
+          access-token: ${{ secrets.GITHUB_TOKEN }}
