--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -54,4 +54,4 @@ jobs:
       - name: Gatsby Publish
         uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          access-token: ${{ secrets.GITHUB_TOKEN }}
+          access-token: x-access-token:${{ secrets.GITHUB_TOKEN }}
